--- a/Currency converter/Base.lproj/Main.storyboard
+++ b/Currency converter/Base.lproj/Main.storyboard
@@ -24,17 +24,41 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L2v-op-p8a">
+                                <rect key="frame" x="0.0" y="20" width="375" height="293"/>
+                            </pickerView>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p9J-vM-O3z">
+                                <rect key="frame" x="0.0" y="354" width="375" height="313"/>
+                            </pickerView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="q3i-Dr-vyV">
+                                <rect key="frame" x="177" y="324" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="p9J-vM-O3z" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6pb-qb-AAO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="p9J-vM-O3z" secondAttribute="bottom" id="7DM-YX-MRH"/>
                             <constraint firstItem="kZl-th-3Y9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="7ii-r9-hC2"/>
                             <constraint firstItem="kZl-th-3Y9" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="96K-gH-G1d"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kZl-th-3Y9" secondAttribute="trailing" constant="10" id="NkD-A0-oac"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="L2v-op-p8a" secondAttribute="trailing" id="UeO-co-eLi"/>
+                            <constraint firstItem="p9J-vM-O3z" firstAttribute="top" secondItem="kZl-th-3Y9" secondAttribute="bottom" constant="10" id="VKo-R8-jCN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p9J-vM-O3z" secondAttribute="trailing" id="VyB-bf-ur6"/>
+                            <constraint firstItem="p9J-vM-O3z" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Wv5-cP-2mv"/>
+                            <constraint firstItem="L2v-op-p8a" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fqc-wA-rgD"/>
+                            <constraint firstItem="q3i-Dr-vyV" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="hsL-W2-wlA"/>
+                            <constraint firstItem="L2v-op-p8a" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rNh-zY-YbG"/>
+                            <constraint firstItem="q3i-Dr-vyV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uy5-6R-8pw"/>
+                            <constraint firstItem="L2v-op-p8a" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wQ5-M7-exi"/>
+                            <constraint firstItem="kZl-th-3Y9" firstAttribute="top" secondItem="L2v-op-p8a" secondAttribute="bottom" constant="10" id="zGJ-aG-mCa"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="q3i-Dr-vyV" id="qjS-c1-6D5"/>
                         <outlet property="label" destination="kZl-th-3Y9" id="dye-2d-ITQ"/>
+                        <outlet property="pickerFrom" destination="L2v-op-p8a" id="Fis-W1-LlW"/>
+                        <outlet property="pickerTo" destination="p9J-vM-O3z" id="Dyp-mV-bhm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
