--- a/Currency converter/Base.lproj/Main.storyboard
+++ b/Currency converter/Base.lproj/Main.storyboard
@@ -20,42 +20,73 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kZl-th-3Y9">
-                                <rect key="frame" x="10" y="323" width="355" height="21"/>
+                                <rect key="frame" x="208" y="353" width="80" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="L1E-ku-IMy"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L2v-op-p8a">
-                                <rect key="frame" x="0.0" y="20" width="375" height="293"/>
+                                <rect key="frame" x="16" y="120" width="175" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="DxL-qS-1L4"/>
+                                    <constraint firstAttribute="width" constant="175" id="nLG-g3-VGr"/>
+                                </constraints>
                             </pickerView>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p9J-vM-O3z">
-                                <rect key="frame" x="0.0" y="354" width="375" height="313"/>
+                                <rect key="frame" x="180" y="120" width="175" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="FpL-5L-QPE"/>
+                                    <constraint firstAttribute="width" constant="175" id="dkT-1Z-FnV"/>
+                                </constraints>
                             </pickerView>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="q3i-Dr-vyV">
-                                <rect key="frame" x="177" y="324" width="20" height="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Convert From" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oP4-Dm-nT3">
+                                <rect key="frame" x="51" y="98" width="104.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Convert To" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CJ6-8j-ccW">
+                                <rect key="frame" x="225" y="98" width="84" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KRm-Th-55k">
+                                <rect key="frame" x="146" y="353" width="8" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="to" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Idq-7g-fb1">
+                                <rect key="frame" x="173.5" y="353" width="15.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="q3i-Dr-vyV">
+                                <rect key="frame" x="257" y="354" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="L2v-op-p8a" secondAttribute="bottom" constant="354" id="5x6-Vb-aKj"/>
-                            <constraint firstItem="p9J-vM-O3z" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6pb-qb-AAO"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="p9J-vM-O3z" secondAttribute="bottom" id="7DM-YX-MRH"/>
-                            <constraint firstItem="kZl-th-3Y9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="7ii-r9-hC2"/>
-                            <constraint firstItem="kZl-th-3Y9" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="96K-gH-G1d"/>
-                            <constraint firstItem="kZl-th-3Y9" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="303" id="G5a-5a-dNY"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kZl-th-3Y9" secondAttribute="trailing" constant="10" id="NkD-A0-oac"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="L2v-op-p8a" secondAttribute="trailing" id="UeO-co-eLi"/>
-                            <constraint firstItem="p9J-vM-O3z" firstAttribute="top" secondItem="kZl-th-3Y9" secondAttribute="bottom" constant="10" id="VKo-R8-jCN"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p9J-vM-O3z" secondAttribute="trailing" id="VyB-bf-ur6"/>
-                            <constraint firstItem="p9J-vM-O3z" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Wv5-cP-2mv"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="kZl-th-3Y9" secondAttribute="bottom" constant="323" id="Yx3-qH-DUz"/>
-                            <constraint firstItem="p9J-vM-O3z" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="354" id="bbF-YZ-9Pk"/>
-                            <constraint firstItem="L2v-op-p8a" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fqc-wA-rgD"/>
-                            <constraint firstItem="q3i-Dr-vyV" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="hsL-W2-wlA"/>
-                            <constraint firstItem="L2v-op-p8a" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rNh-zY-YbG"/>
-                            <constraint firstItem="q3i-Dr-vyV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uy5-6R-8pw"/>
-                            <constraint firstItem="L2v-op-p8a" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wQ5-M7-exi"/>
-                            <constraint firstItem="kZl-th-3Y9" firstAttribute="top" secondItem="L2v-op-p8a" secondAttribute="bottom" constant="10" id="zGJ-aG-mCa"/>
+                            <constraint firstItem="L2v-op-p8a" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="100" id="2GV-dv-wPb"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="CJ6-8j-ccW" secondAttribute="trailing" constant="50" id="352-7P-RlD"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="KRm-Th-55k" secondAttribute="bottom" constant="293" id="6Ff-7s-DaC"/>
+                            <constraint firstItem="KRm-Th-55k" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="130" id="A0X-YD-TAi"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Idq-7g-fb1" secondAttribute="trailing" constant="170" id="GMo-6j-NGX"/>
+                            <constraint firstItem="oP4-Dm-nT3" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="78" id="IPo-NG-b0n"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="Idq-7g-fb1" secondAttribute="bottom" constant="293" id="Ij5-ID-s3b"/>
+                            <constraint firstItem="CJ6-8j-ccW" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="78" id="NS2-iU-sWY"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="kZl-th-3Y9" secondAttribute="bottom" constant="293" id="PX5-Je-fKd"/>
+                            <constraint firstItem="p9J-vM-O3z" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="100" id="XcI-lF-WFU"/>
+                            <constraint firstAttribute="trailing" secondItem="p9J-vM-O3z" secondAttribute="trailing" constant="20" id="asy-zX-U5w"/>
+                            <constraint firstItem="L2v-op-p8a" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="cKl-Ut-nML"/>
+                            <constraint firstItem="oP4-Dm-nT3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="35" id="fgV-Q4-n8u"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kZl-th-3Y9" secondAttribute="trailing" constant="71" id="gdA-Jo-jf1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -68,6 +99,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="118.29085457271366"/>
         </scene>
     </scenes>
 </document>
